<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color"
        tools:context=".ui.login.LoginFragment">
    <Button
            android:text="@string/login"
            style="@style/largeButton"
            android:background="@drawable/btn_reglog"
            android:layout_width="300dp"
            android:layout_height="66dp" android:id="@+id/btn_login"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.788" app:layout_constraintHorizontal_bias="0.494"
            app:rippleColor="@color/purple_200" android:focusable="auto" android:keepScreenOn="false"/>
    <TextView
            android:text=""
            android:background="@drawable/shp_logreg_box"
            android:layout_width="268dp"
            android:layout_height="161dp" android:id="@+id/txt_shp_reg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.597" app:layout_constraintHorizontal_bias="0.496"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo"
            android:id="@+id/img_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.142"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/app_name"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="220dp"
            android:layout_height="49dp"
            android:textColorHint="@color/colorHint"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.532"
            android:id="@+id/txt_username"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHint"
                android:hint="@string/username" android:id="@+id/txtin_username"
                android:textColorHint="@color/colorHint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="217dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.62" android:id="@+id/txt_psw"
            android:textColorHint="@color/colorHint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintVertical_bias="0.591"
                android:id="@+id/txtin_psw"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:src="@drawable/img_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/img_appname"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.373" app:layout_constraintHorizontal_bias="0.569"
            android:contentDescription="@string/app_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>